--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "^1.0.2",
+    "@11ty/eleventy-plugin-rss": "^1.2.0",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^4.2.0",
     "@tailwindcss/typography": "^0.5.8",
     "autoprefixer": "^10.4.13",
     "daisyui": "^2.43.0",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
     "vite": "^2.9.15"
+  },
+  "dependencies": {
+    "eleventy-plugin-toc": "^1.1.5",
+    "markdown-it": "^13.0.1",
+    "markdown-it-anchor": "^8.6.5"
   }
 }
