--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "nnbblog",
-  "version": "0.0.0",
   "description": "NNB's blog",
   "scripts": {
     "dev": "eleventy --serve",
@@ -19,6 +18,7 @@
   },
   "dependencies": {
     "eleventy-plugin-toc": "^1.1.5",
+    "js-yaml": "^4.1.0",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.5"
   }
