Added home header

--- a/src/_data/metadata.yaml
+++ b/src/_data/metadata.yaml
@@ -1,8 +1,8 @@
 title: NNBlog
 subtitle: NNB's blog
 language: en
-url: https://nnbnh.github.io/blog
+url: https://NNBnh.github.io/blog
 author:
   name: NNB
   email: nnbnh@protonmail.com
-  url: https://nnbnh.github.io
+  url: https://NNBnh.github.io
