--- a/src/_data/metadata.yaml
+++ b/src/_data/metadata.yaml
@@ -1,7 +1,9 @@
 ---
 title: NNBlog
 description: Blog that SuperB
-language: en #TODO
+languages:
+  - en
+  - vi
 url: https://NNBnh.github.io/blog
 author:
   name: NNB
