--- a/src/tags/tags.yaml
+++ b/src/tags/tags.yaml
@@ -12,6 +12,6 @@ pagination:
   addAllPagesToCollections: true
 eleventyComputed:
   title: "#{{ tag }}"
-  description: "{{ tags_data[ tag | slugify ].description | langString(lang) }}"
+  description: "{{ tags_data[ tag | slugify ].description | lang_string(lang) }}"
   image: "{{ tags_data[ tag | slugify ].image }}"
 permalink: "/{{ lang }}/tags/{{ tag | slugify }}/"
