Fixed most of i18n stuff...

--- a/src/_data/metadata.yaml
+++ b/src/_data/metadata.yaml
@@ -1,6 +1,9 @@
 ---
 title: NNBlog
 description: Blog that SuperB
+languages:
+  - en
+  - vi
 url: https://NNBnh.github.io/blog
 author:
   name: NNB
