--- a/src/tags/tags.yaml
+++ b/src/tags/tags.yaml
@@ -1,5 +1,5 @@
 ---
-layout: page/tag.njk
+layout: layouts/tag.njk
 pagination:
   data: collections
   size: 1
@@ -12,6 +12,6 @@ pagination:
   addAllPagesToCollections: true
 eleventyComputed:
   title: "#{{ tag }}"
-  description: "{{ tags_data[ tag | slugify ].description[ lang ] }}"
+  description: "{{ tags_data[ tag | slugify ].description | lang_string(lang) }}"
   image: "{{ tags_data[ tag | slugify ].image }}"
-permalink: "{{ page.lang }}/tags/{{ tag | slugify }}/"
+permalink: "/{{ lang }}/tags/{{ tag | slugify }}/"
