--- a/src/_data/metadata.yaml
+++ b/src/_data/metadata.yaml
@@ -2,8 +2,8 @@
 title: NNBlog
 description: Blog that SuperB
 languages:
-  - en
-  - vi
+  en: English
+  vi: Tiếng Việt
 url: https://NNBnh.github.io/blog
 author:
   name: NNB
