Added home header's image cool hover effect

--- a/src/_data/metadata.yaml
+++ b/src/_data/metadata.yaml
@@ -7,5 +7,6 @@ languages:
 url: https://NNBnh.github.io/blog
 author:
   name: NNB
+  description: Dev that SuperB
   email: nnbnh@protonmail.com
   url: https://NNBnh.github.io
