--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.2.0",
     "@tailwindcss/typography": "^0.5.8",
+    "alpinejs": "^3.11.1",
     "autoprefixer": "^10.4.13",
     "daisyui": "^2.43.0",
     "postcss": "^8.4.19",
