--- a/src/_data/tags_data.yaml
+++ b/src/_data/tags_data.yaml
@@ -1,4 +1,6 @@
 ---
+default:
+  image: https://images.unsplash.com/photo-1597062985395-720978d2ca4e
 update:
   description:
     en: Some announcement to make
