--- a/src/tags/tags.yaml
+++ b/src/tags/tags.yaml
@@ -13,5 +13,5 @@ pagination:
 eleventyComputed:
   title: "#{{ tag }}"
   description: "{{ tags_data[ tag | slugify ].description | lang_string }}"
-  image: "{{ tags_data[ tag | slugify ].image or 'https://images.unsplash.com/photo-1597062985395-720978d2ca4e' }}"
+  image: "{{ tags_data[ tag | slugify ].image or tags_data.default.image }}"
 permalink: "/{{ lang }}/tags/{{ tag | slugify }}/"
