--- a/src/_data/footer.yaml
+++ b/src/_data/footer.yaml
@@ -1,7 +1,7 @@
 ---
 links:
-  - name: Home
-    url: /
+  - name: Email
+    url: mailto:nnbnh@protonmail.com
   - name: Atom
     url: /feed.xml
   - name: RSS
