--- a/src/_data/metadata.yaml
+++ b/src/_data/metadata.yaml
@@ -9,4 +9,4 @@ author:
   name: NNB
   description: Dev that SuperB
   email: nnbnh@protonmail.com
-  url: https://NNBnh.github.io
+  url: https://codeberg.org/NNB
