--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "description": "NNB's blog",
   "scripts": {
     "dev": "eleventy --serve",
-    "build": "eleventy"
+    "build": "eleventy",
+    "deploy": "gh-pages --dist dist --branch pages"
   },
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
@@ -19,6 +20,7 @@
   },
   "dependencies": {
     "eleventy-plugin-toc": "^1.1.5",
+    "gh-pages": "^6.0.0",
     "js-yaml": "^4.1.0",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.5"
