modified:   src/_data/metadata.yaml 	modified:   src/home.njk

--- a/src/_data/metadata.yaml
+++ b/src/_data/metadata.yaml
@@ -4,7 +4,7 @@ description: Blog that SuperB
 languages:
   en: English
   vi: Tiếng Việt
-url: https://NNBnh.github.io/blog
+url: https://nnb.codeberg.page/blog
 author:
   name: NNB
   description: Dev that SuperB
