--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -27,11 +27,12 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-      ref: pages
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          ref: pages
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
